# elderly-legal-rag

./: .gitignore  AGENTS.md  README.md  SKN28-3rd-1Team.code-workspace
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/results/: openai_cerebras_fallback_false_smoke.csv  openai_gpt_oss_120b_cerebras_fp16_fallback_false_raw.csv
backend/results/openai_cerebras_fallback_false_shards/: shard_0.csv  shard_1.csv  shard_2.csv  shard_3.csv
backend/scripts/: check_langsmith_trace.py  export_validation_combined_csv.py  export_validation_csvs.py  export_validation_xlsx.py  langsmith_benchmark_common.py  manual_chat.py  parse_testcases.py  provider_smoke.py  run_backend_settings_benchmark.py  run_full_validation_resume.sh  run_langsmith_benchmark_experiment.py  run_validation_csv.py  summarize_backend_settings_benchmark.py  sync_langsmith_benchmark_dataset.py  validation_smoke.py
backend/src/: app.py  file_store.py  logger.py  rag_ingest_client.py  rate_limiter.py  session_store.py  settings.py
backend/src/agent/: graph.py  openrouter_llm.py  tool.py
backend/src/api/: chat.py  files.py
backend/src/mock/: chat.py  chat_response.json
backend/src/prompt/: __init__.py  clarification_human.md  clarification_system.md  grounded_answer_human.md  grounded_answer_system.md  prompt_loader.py  system.md  system_prompt.j2  templates.py
backend/src/schemas/: __init__.py  chat.py  files.py
backend/tests/: test_backend_core.py
rag/: .env.example  .gitignore  README.md  collect_ordinance.py  pyproject.toml
rag-red-team/: .dockerignore  .env.example  Dockerfile  README.md  mcp_server.py  pyproject.toml
rag-red-team/infra/: docker-compose.yml
rag-red-team/original-data-toon/: 고용상 연령차별금지 및 고령자고용촉진에 관한 법률.toon  근로기준법.toon
rag-red-team/original-data-with-chunk-and-edge/: README.md  고용보험법.docx  고용상 연령차별금지 및 고령자 고용 촉집에 대한 법률.docx  근로기준법.docx  근로자퇴직급여 보장법.docx
rag-red-team/original-data-with-chunk-and-edge-md/: README.md  고용보험법.md  고용상 연령차별금지 및 고령자 고용 촉집에 대한 법률.md  근로기준법.md  근로자퇴직급여 보장법.md
rag-red-team/src/rag_red_team_neo4j/: __init__.py  config.py  docx_relations.py  graph_builder.py  load_graph.py  mcp_server.py  md_relations.py  models.py  readonly_cypher.py  toon_parser.py
rag/RAG_ORIGINAL_DATA/rag_datas/: 고용보험법_raw.json  고용상 연령차별금지 및 고령자고용촉진에 관한 법률_raw.json  근로기준법_raw.json  최저임금법_raw.json
rag/RAG_PREPROCESSED_DATA/: README.md
rag/RAG_PREPROCESSED_DATA/rag_datas/: 고용보험법.toon  근로자퇴직급여 보장법.toon  최저임금법.toon
rag/be/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
rag/be/src/: app.py  logger.py  (+1 more)
rag/code_reference/: collect.py  graphrag_law.py  preprocess_law.py  preprocess_ordinance.py
rag/docs/: agentic_ingest_flow_prd.md  job_observability_stream_prd_2026-06-01_171222_kst.md  memgraph_mcp_graphrag_prd.md  query_agent_tool_boundary_correction_prd.md  query_service_tooling_prd.md  schema_boundary_cleanup_scope_2026-05-31_233845_kst.md
rag/fe/: .dockerignore  .env.example  Dockerfile  README.md  index.html  package.json
rag/infra/: .env.example  README.md  docker-compose.yml
rag/sample_datas/: 근로기준법_cleaned.md  근로기준법_cleaned.txt  근로기준법_raw.json  근로자퇴직급여 보장법_cleaned.md  근로자퇴직급여 보장법_cleaned.txt  근로자퇴직급여 보장법_raw.json  기초연금법_cleaned.md  기초연금법_cleaned.txt  기초연금법_raw.json  노인복지법_cleaned.md  노인복지법_cleaned.txt  노인복지법_raw.json  최저임금법_cleaned.md  최저임금법_cleaned.txt  최저임금법_raw.json
rag/src/: app.py  settings.py
streamlit/: .dockerignore  .env.example  .gitignore  Dockerfile  PR_SUMMARY.md  README.md  frontend_design.md  frontend_usecases.md  main.py  pyproject.toml  streamlit.py
streamlit/src/: api_client.py  app.py  asset_paths.py  chat_backend_client.py  navigation.py  response_renderer.py  settings.py  structured_logging.py
(+497 files in other folders)
