[project]
name = "backend"
version = "0.1.0"
description = "Main backend service for the SKN28 3rd 1Team project"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langgraph>=1.2.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.47.0",
]

[tool.uv]
package = false
