[project]
name = "backend"
version = "0.1.0"
description = "Main backend service for the SKN28 3rd 1Team project"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.136.1",
    "jinja2>=3.1.0",
    "langchain>=1.3.1",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.47.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
