[project]
name = "rag-red-team-neo4j"
version = "0.1.0"
description = "Manual Neo4j graph and read-only MCP tools for RAG red-team comparison"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastmcp>=2.14.1",
    "neo4j>=6.2.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
