[project]
name = "streamlit-app"
version = "0.1.0"
description = "Streamlit-based Python framework project for SKN28 3rd 1Team"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "streamlit>=1.57.0",
    "structlog>=25.5.0",
]

[tool.uv]
package = false
