[project]
name = "rag-be"
version = "0.1.0"
description = "Memgraph GraphRAG backend and MCP service for SKN28 3rd 1Team"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.136.3",
    "firecrawl-py>=4.28.2",
    "graphrag>=3.0.9",
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "loguru>=0.7.3",
    "mcp>=1.27.1",
    "neo4j>=6.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "redis>=6.0.0",
    "uvicorn[standard]>=0.48.0",
]

[tool.uv]
package = false

[tool.fastapi]
entrypoint = "src/app.py"
